crush when load this scene _ with simple materials and simple objects #58279

Closed
opened 2018-11-30 07:54:15 +01:00 by Kyle.Liu · 3 comments

System Information
Operating system: windows10
Graphics card: gtx1080ti

Blender Version
Broken: 2.80, 4c31bed6b4, blender2.8, 2018-11-30 00:46
Worked: None

Short description of error
This scene I create with blender-2.80-26d5a3625ed-win64 using eevee render engine.
And then I change to the cycle render, viewport rendering working fine, but I press f12 , blender crashed.
And then I can not open this file again.

The scene file is here: SCENE.blend

**System Information** Operating system: windows10 Graphics card: gtx1080ti **Blender Version** Broken: 2.80, 4c31bed6b46, blender2.8, 2018-11-30 00:46 Worked: None **Short description of error** This scene I create with blender-2.80-26d5a3625ed-win64 using eevee render engine. And then I change to the cycle render, viewport rendering working fine, but I press f12 , blender crashed. And then I can not open this file again. The scene file is here: [SCENE.blend](https://archive.blender.org/developer/F5764575/SCENE.blend)
Author

Added subscriber: @Kyle.Liu

Added subscriber: @Kyle.Liu

This issue was referenced by a8c884c3ba

This issue was referenced by a8c884c3ba288c45c9ebc0d5bb2bb9b7c7d17766

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2018-11-30 10:47:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58279
No description provided.