Fix T58279: crush when load this scene _ with simple materials and simple objects.

Not sure why eevee's light_cache is NULL in that file, but this can be
handled gracefully instead of crashing. ;)